fixed guide creation not showing newly created guide - added message to inform user when no guides or POI are showing

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -30,6 +30,10 @@ html{
 }
 
 
+.info {
+  font-size: 1.6em;
+  font-family: 'Fellix Medium';
+}
 
 
 /* --------------- */
